@@ -98,7 +98,7 @@ class GLRenderer : public QGLWidget
 		PROPERTY (public,		bool,					DrawOnly,	BOOL_OPS,	STOCK_WRITE)
 		PROPERTY (public,		MessageManager*,	MessageLog, NO_OPS,		STOCK_WRITE)
 		PROPERTY (private,	bool,					Picking,		BOOL_OPS,	STOCK_WRITE)
-		PROPERTY (public,		LDDocument*,				File,			NO_OPS,		CUSTOM_WRITE)
+		PROPERTY (public,		LDDocument*,		File,			NO_OPS,		CUSTOM_WRITE)
 		PROPERTY (public,		EditMode,			EditMode,	NO_OPS,		CUSTOM_WRITE)
 
 	public methods:
